Verifica firma eidas 1.12.0 (#2)
* Gitlab rsync project

* Pre-release 1.12.0

---------

Co-authored-by: usrPARERtest <usrparertest@regione.emilia-romagna.it>