@@ -1,24 +1,6 @@
-/*
- * Engineering Ingegneria Informatica S.p.A.
- *
- * Copyright (C) 2023 Regione Emilia-Romagna
- * <p/>
- * This program is free software: you can redistribute it and/or modify it under the terms of
- * the GNU Affero General Public License as published by the Free Software Foundation,
- * either version 3 of the License, or (at your option) any later version.
- * <p/>
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
- * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
- * See the GNU Affero General Public License for more details.
- * <p/>
- * You should have received a copy of the GNU Affero General Public License along with this program.
- * If not, see <https://www.gnu.org/licenses/>.
- */
-
 package it.eng.parer.eidas.core.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.springframework.stereotype.Service;
@@ -41,8 +23,7 @@ public class ErrorCodeManagerImpl implements IErrorCodeManager {
      */
     @Override
     public List<ErrorCode> get() {
-        return Stream.of(ParerError.ErrorCode.values()).filter(e -> !e.equals(ErrorCode.NOT_FOUND))
-                .collect(Collectors.toList());
+        return Stream.of(ParerError.ErrorCode.values()).filter(e -> !e.equals(ErrorCode.NOT_FOUND)).toList();
     }
 
     @Override
